# advent-of-code

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
2023/: README.md
2023/1/: Cargo.toml  README.md  Solution.1.md  Solution.2.md
2023/1/data/: output.2.txt
2023/1/src/: main.rs  part1.rs  part2.rs
2023/10/: Cargo.toml  README.md  Solution.1.md  Solution.2.md
2023/10/data/: input.sm3.txt  (+1 more)
2023/1_new/: Cargo.toml  README.md
2023/2/: Cargo.toml  README.md  Solution.1.md  Solution.2.md
2023/3/: Cargo.toml  README.md  Solution.1.md  Solution.2.md
2023/4/: Cargo.toml  README.md  Solution.1.md  Solution.2.md
2023/5/: Cargo.toml  README.md  Solution.1.md  Solution.2.md
2023/5/data/: output.1.txt  output.2.txt
2023/5/src/: part1.rs  part2.rs  types.rs
2023/6/: Cargo.toml  README.md  Solution.1.md  Solution.2.md
2023/6/data/: output.1.txt  output.2.txt
2023/6/src/: main.rs  part1.rs  part2.rs  shared.rs  types.rs  types1.rs  types2.rs
2023/7/: Cargo.toml  README.md  Solution.1.md  Solution.2.md
2023/8/: Cargo.toml  README.md  Solution.1.md  Solution.2.md
2023/8/data/: output.1.txt  output.2.txt
2023/8/src/: part1.rs  part2.rs  types.rs
2023/9/: Cargo.toml  README.md  Solution.1.md  Solution.2.md
2024/: README.md
2024/1/: README.md  Solution.1.md  Solution.2.md  lets.go
lib/: Cargo.toml
lib/parse/: Cargo.toml
lib/src/: answer.rs  file.rs  lib.rs  matrix.rs  parse.rs  solution.rs  solve.rs
template/: Cargo.toml  README.md  Solution.1.md  Solution.2.md
template/day/: Cargo.toml
template/src/: main.rs  part1.rs  part2.rs
(+79 files in other folders)
